stops logo squishing

--- a/_sass/_sponsors.scss
+++ b/_sass/_sponsors.scss
@@ -6,6 +6,7 @@
   @include breakpoint(medium) {
     margin: 0;
     display: inline-block;
+    height: 150px;
   }
 }
 
